Phone overflow correction

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,4 +6,5 @@ html {
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
 }
